# movie-booking-system

./: .gitignore  Build.bat  CMakeLists.txt  README.md
datastore/: movies_list.csv  theatre_shows_list.csv
hdr/: BookingTicket.h  DisplayMenu.h  FileUtilities.h  Movie.h  MoviesData.h  TheatreData.h
src/: BookingTicket.cpp  DisplayMenu.cpp  FileUtilities.cpp  MoviesData.cpp  TheatreData.cpp  main.cpp
